--- a/leora/package.json
+++ b/leora/package.json
@@ -52,6 +52,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-svelte": "^0.561.0",
+		"mini-svg-data-uri": "^1.4.4",
 		"svelte-motion": "^0.12.2",
 		"tailwind-merge": "^3.4.0"
 	}
